[package]
name = "backstop"
version = "1.0.0"
authors = ["Blend Capital <gm@blend.capital>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = [
    "soroban-sdk/testutils",
]
certora = []

[dependencies]
soroban-sdk = { workspace = true }
soroban-fixed-point-math = { workspace = true }
cast = { workspace = true }
sep-41-token = { workspace = true }

nondet = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban", default-features=false, features=["soroban"]}
certora = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban"}
certora-soroban = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban"}
certora-soroban-macros = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban"}
paste = "1.0.5"

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
mock-pool-factory = { path = "../mocks/mock-pool-factory", features = ["testutils"] }
emitter = { path = "../emitter", features = ["testutils"] }
sep-41-token = { workspace = true, features = ["testutils"] }
